Set image height to auto. Prevents images from being wrongly sized on small screens

--- a/shared-memory-dump/style.css
+++ b/shared-memory-dump/style.css
@@ -226,7 +226,7 @@ li {margin: 0}
 
 /* IMAGES */
 
-img {vertical-align: middle;max-width: 100%;}
+img {vertical-align: middle;max-width: 100%; height:auto;}
 
 .image {
   position: relative;
